# rust-fastcgi

./: Cargo.toml  README.md  build_and_restart.sh  config.json
config/: config.json  simple.json  tcp.json  unix.json
src/: config.rs  connection.rs  handlers.rs  main.rs  request.rs  response.rs  server.rs  utils.rs
src/handlers/: commands.rs  debug.rs  jemalloc_stats.rs  request_info.rs  route.rs  utils.rs
src/response/: body.rs  responder.rs  writer.rs
src/server/: processor.rs  tcp.rs  unix.rs
systemd/: rust-fastcgi.service
