[package]
name = "rust-fastcgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.9"
getset = "0.1"
http = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
tokio = { version = "1", features = ["full"] }
tokio-fastcgi = "1"