[package]
name = "rust-fastcgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
getset = "0.1"
http = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-fastcgi = "1"